--- a/index.html
+++ b/index.html
@@ -158,7 +158,9 @@
 				});
 
 				$button.addEventListener('Button.keys', event => {
-					$keys.innerHTML = event.detail.keys;
+					const { keys } = event.detail;
+
+					$keys.innerHTML = keys;
 				});
 			});
 		</script>
