--- a/index.html
+++ b/index.html
@@ -33,15 +33,17 @@
 
 	<body>
 		<div class="container">
-			<div class="row">
-				<div class="col-12 my-5">
-					<h1 class="">
+			<div class="row my-5">
+				<div class="col-12">
+					<h1 class="m-0">
 						<a href="https://github.com/19h47/19h47-list">
 							List
 						</a>
 					</h1>
 				</div>
-				<div class="col-12 my-5">
+			</div>
+			<div class="row my-5">
+				<div class="col-12">
 					<div id="monster" class="js-list p-3 border rounded-lg">
 						<h2 id="monster-label">Choose an monster <sup class="js-keys"></sup></h2>
 						<button
@@ -63,7 +65,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-12 my-5">
+			</div>
+			<div class="row my-5">
+				<div class="col-12">
 					<div class="js-list p-3 border rounded-lg" id="spells">
 						<h2 id="monster-label">Choose an spells <sup class="js-keys"></sup></h2>
 						<button
