--- a/index.html
+++ b/index.html
@@ -28,17 +28,25 @@
 				background-color: #007bff;
 				border-color: #007bff;
 			}
+
+			.Alert {
+				margin: 1em;
+				position: fixed;
+				top: 0;
+				bottom: 0;
+				right: 0;
+				z-index: 10;
+			}
 		</style>
 	</head>
 
 	<body>
+		<div class="Alert js-alert"></div>
 		<div class="container">
 			<div class="row my-5">
 				<div class="col-12">
 					<h1 class="m-0">
-						<a href="https://github.com/19h47/19h47-list">
-							List
-						</a>
+						<a href="https://github.com/19h47/19h47-list"> List </a>
 					</h1>
 				</div>
 			</div>
@@ -55,7 +63,7 @@
 						>
 							<span class="js-list-label">Monsters</span>
 						</button>
-						<div class="border overflow-hidden rounded-lg" style="height: 293px;">
+						<div class="border overflow-hidden rounded-lg" style="height: 293px">
 							<ul
 								class="list-group list-group-flush js-list-box overflow-auto"
 								tabindex="-1"
@@ -98,15 +106,8 @@
 			const lists = [...document.querySelectorAll('.js-list')];
 			const url = 'https://www.dnd5eapi.co/api/';
 
-			const getMonsters = async () => {
-				let response = await fetch(`${url}monsters`);
-				let data = await response.json();
-
-				return data;
-			};
-
-			const getSpells = async () => {
-				let response = await fetch(`${url}spells`);
+			const getData = async url => {
+				let response = await fetch(url);
 				let data = await response.json();
 
 				return data;
@@ -118,7 +119,22 @@
 				</li>
 			`;
 
-			lists.map($list => {
+			const alert = content => {
+				const div = document.createElement('div');
+
+				div.className = 'toast fade show';
+				div.style = 'toast fade show';
+				div.innerHTML = `<div class="toast-body">${content}</div>`;
+
+				div.setAttribute('role', 'alert');
+				div.setAttribute('aria-live', 'assertive');
+				div.setAttribute('aria-atomic', 'true');
+
+				return div;
+			};
+			const $alert = document.querySelector('.js-alert');
+
+			lists.forEach($list => {
 				const $listbox = $list.querySelector('[role="listbox"]');
 				const $button = $list.querySelector('.js-list-button');
 				const $keys = $list.querySelector('.js-keys');
@@ -126,7 +142,7 @@
 				const { id } = $list;
 
 				if ('monster' === id) {
-					const data = getMonsters();
+					const data = getData(`${url}monsters`);
 
 					data.then(monsters => {
 						monsters.results.forEach(monster => {
@@ -142,7 +158,7 @@
 				}
 
 				if ('spells' === id) {
-					const data = getSpells();
+					const data = getData(`${url}spells`);
 
 					data.then(spells => {
 						spells.results.forEach(spell => {
@@ -157,12 +173,22 @@
 					});
 				}
 
-				$button.addEventListener('Button.change', event => {
-					console.log(event.detail);
+				$button.addEventListener('Button.change', ({ detail }) => {
+					const $el = alert(detail.item.innerHTML);
+
+					$alert.appendChild($el);
+
+					$el.addEventListener(
+						'click',
+						() => $el.style.setProperty('display', 'none'),
+						false,
+					);
+
+					setTimeout(() => $el.parentNode.removeChild($el), 2000);
 				});
 
-				$button.addEventListener('Button.keys', event => {
-					const { keys } = event.detail;
+				$button.addEventListener('Button.keys', ({ detail }) => {
+					const { keys } = detail;
 
 					$keys.innerHTML = keys;
 				});
