--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 								tabindex="-1"
 								role="listbox"
 								aria-labelledby="monster-label"
+								aria-multiselectable="true"
 							></ul>
 						</div>
 					</div>
