:zap: Remove EventDispatcher for node events

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 				div.className = 'toast fade show';
 				div.style = 'toast fade show';
-				div.innerHTML = `<div class="toast-body">${content}</div>`;
+				div.innerHTML = `<div class="toast-body"><strong>${content}</strong></div>`;
 
 				div.setAttribute('role', 'alert');
 				div.setAttribute('aria-live', 'assertive');
